--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,14 @@ body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
-	line-height: 1.5;
+  line-height: 1.5;
+  
 }
 body {
 	background-color: #fdfdfd;
 	margin: 0;
-	position:relative;
+  position:relative;
+  width:100%;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -44,10 +46,17 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  line-height: 45px;
   text-align: center;
   text-transform: uppercase;
+  height: 45px;
+  float: left;
+  width: 100%;
 }
+header{
+  
+}
+
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
@@ -57,6 +66,7 @@ nav {
 }
 nav h1 {
   margin: auto;
+  line-height: 80px;
 }
 nav h1 a {
   color: #fff;
@@ -66,12 +76,12 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
+    padding: 10px 38px 16px;
     list-style: none;
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    width: auto;
 }
 
 /* Display list items side by side */
@@ -106,16 +116,20 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 75px;
   background-color: #3397DB;
   align-items: center;
+  display: inline-flex;
 }
+
 .filter-options h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
-  line-height: 1;
-  margin: 0 20px;
+  
+  margin-top: 20px;
+  margin-left:5%;
+  
 }
 .filter-options select {
   background-color: white;
@@ -124,9 +138,10 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
+  margin: 20px;
   padding: 0 10px;
   width: 200px;
+  line-height: 75px;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -134,26 +149,31 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
-  text-align: center;
+  padding: 30px 10px 60px;
+  
+  
 }
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
+  margin: 1rem;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+  display: inline-block;
+ 
 }
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
-  margin: 0;
+  margin-top: 15px;
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
+  border-radius: 25px 0px 0px 0px;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -184,28 +204,26 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 .inside header {
-  position: fixed;
-  top: 0;
+  
   width: 100%;
   z-index: 1000;
 }
-.inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
-}
 .inside #map {
-  background-color: #ccc;
-  height: 100%;
+  height: 400px;
   width: 100%;
+  background-color: #ccc;
 }
 .inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
+  background-color: #444;
+  color: #aaa;
+  font-size: 8pt;
+  letter-spacing: 1px;
+  line-height: 45px;
+  text-align: center;
+  text-transform: uppercase;
+  height: 45px;
+  float: left;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -218,7 +236,8 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+  width: 100%;
+  border-radius: 25px 0px 0px 0px;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -234,42 +253,75 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
-#restaurant-container, #reviews-container {
+#restaurant-container{
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
-}
-#reviews-container {
-  padding: 30px 40px 80px;
+  padding: 15px 40px 30px;
+  
 }
 #reviews-container h2 {
-  color: #f58500;
-  font-size: 24pt;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
+  color: #f18200;
+  font-family: Arial,sans-serif;
+  font-size: 20pt;
+  font-weight: 200;
+  letter-spacing: 0;
+  margin: 15px 40px 20px;
+  text-transform: uppercase;
+  line-height: 1.1;
 }
 #reviews-list {
+  background-color: #f3f3f3;
+  list-style: outside none none;
   margin: 0;
-  padding: 0;
+  padding: 0px 35px 0px;
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
-  display: block;
-  list-style-type: none;
-  margin: 0 0 30px;
-  overflow: hidden;
-  padding: 0 20px 20px;
-  position: relative;
-  width: 85%;
+  border: 2px solid #f3f3f3;
+  width: auto;
+  border-radius: 25px 0px 25px 0px;
+  font-family: Arial,sans-serif;
+  margin: 0 auto;
+  margin-bottom: 2rem;
+  text-align: left;
+  display: inline-block;
+  min-width: 100%;
 }
 #reviews-list li p {
   margin: 0 0 10px;
+  
 }
 #restaurant-hours td {
   color: #666;
+}
+@media (max-width: 635px){
+  .filter-options{
+    height: 120px;
+    display: flow-root;
+  }
+  .filter-options h2 {
+    margin-bottom: 0px;
+  } 
+}
+@media (max-width: 413px){
+  nav{
+    height:160px;
+  }
+  #footer, .inside #footer{
+    height:100px;
+  }
+}
+@media (max-width: 500px){
+  .filter-options{
+    height: 200px;
+  
+  }
+}
+@media (max-width: 775px){
+  #restaurants-list li {
+    
+    
+  }
 }
